bad shape rolls

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,31 +18,31 @@
             "armors": "Armors",
             "bond": "Bond",
             "bonus": "Damage Bonus",
-            "bio": "Biography",    
-            "traits": "Personality traits",                    
+            "bio": "Biography",
             "boons": "Boons",
             "boon": "Boon",
-            "melee": "Hand-to-hand",
             "cap_off": "Attacks",
             "category": "Category",
             "character": "Character",
             "combat": "Combat",
             "description": "Description",
-            "ranged": "Distance",
             "equipment": "Equipment",
             "elite": "Elite",
             "flaw": "Flaw",
             "goal": "Goal",
             "health": "Health",
-            "supportNumber": "Support number",
             "heroism": "Heroism",
+            "melee": "Hand-to-hand",
             "name": "Name",
             "origin": "Origin",
             "quote": "Quote",
             "protections": "Protections",
+            "ranged": "Distance",
             "skills" : "Skills",
+            "supportNumber": "Support number",
             "tactic": "Tactic",
             "trainings": "Trained in : ",
+            "traits": "Personality traits",
             "type": "Type",
             "unlock_sheet": "Unlock Sheet",
             "wealth": "Wealth",
@@ -116,6 +116,7 @@
             "titleweapon": "Attack of {itemName}",
             "introdamage": "{actingCharName} does damage with {itemName}.",
             "titledamage": "Damages of {itemName}",
+            "introBadShape": "{actingCharName} is in bad shape and uses the skill {itemName}.",
             "button":{
                 "rollmodifier": "Modifier for the roll: ",
                 "cancel": "Cancel",
