--- a/lang/fr.json
+++ b/lang/fr.json
@@ -19,30 +19,30 @@
             "bond": "Lien",
             "bonus": "Bonus aux dégâts",
             "bio": "Biographie",
-            "traits": "Traits de personnalité",
             "boons": "Atouts",
             "boon": "Atout",
-            "melee": "Corps-à-corps",
             "cap_off": "Capacités Offensives",
             "category": "Catégorie",
             "character": "Personnage",
             "combat": "Combat",
             "description": "Description",
-            "ranged": "Distance",
             "equipment": "Équipement",
             "elite": "Élite",
             "flaw": "Défaut",
             "goal": "Idéal",
             "health": "Vitalité",
-            "supportNumber": "Effectifs",
             "heroism": "Héroisme",
+            "melee": "Corps-à-corps",
             "name": "Nom",
             "origin": "Origine",
             "quote": "Citation",
             "protections": "Protections",
+            "ranged": "Distance",
             "skills" : "Compétences",
+            "supportNumber": "Effectifs",
             "tactic": "Tactique",
             "trainings": "Formé(e) aux : ",
+            "traits": "Traits de personnalité",
             "type": "Type",
             "unlock_sheet": "Verrouiller/Déverrouiller la feuille",
             "wealth": "Richesses",
@@ -141,6 +141,7 @@
             "titleweapon": "Attaque de {itemName}",
             "introdamage": "{actingCharName} blesse son adversaire avec {itemName}",
             "titledamage": "Dégâts de {itemName}",
+            "introBadShape": "{actingCharName} est Mal en point et utilise {itemName}.",
             "button":{
                 "cancel": "Annuler",
                 "roll": "Lancer"
