:bug: defence roll bug

--- a/lang/en.json
+++ b/lang/en.json
@@ -101,7 +101,8 @@
             "heroismmodifier": "One Heroism point used : +1d6",
             "rollformula": "Final dice rolled:",
             "rollresult": "Result of the dice roll: ",
-            "damageresult": "Damages are: ",
+            "rollDamageFormula": "Damage roll:",
+            "damageresult": "Damage result: ",
             "weapon": "Weapon ({nbDices}d6)",
             "heroism": "Heroism",
             "lethalattack": "Lethal",
