:lipstick: meilleure gestion largeur de feuille PJ

--- a/lang/en.json
+++ b/lang/en.json
@@ -100,7 +100,7 @@
             "category": {
                 "standard": "Standard",
                 "war": "War weapon",
-                "heavy": "Heavy weapone"
+                "heavy": "Heavy weapon"
             },
             "type": {
                 "melee": "Melee",
