:sparkles: Fix reroll and add damageBonus

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -109,6 +109,7 @@
             "rollDamageFormula": "Formule des dégâts : ",
             "damageresult": "Résultat des dégâts : ",
             "weapon": "Arme ({nbDices}d6)",
+            "damageBonus": "Bonus ({nbDices}d6)",
             "heroism": "Héroisme",
             "lethalattack": "Meurtrière",
             "explosive": "Explosive",
@@ -124,6 +125,7 @@
             },
             "display_help_title": "Résumé de règles",
             "rollmodifier": "Modificateur pour le jet : ",
+            "damageBonus": "Bonus aux dégâts : ",
             "nbReroll": "Nombre de relances possibles :",
             "heroism": "Utiliser un point d'héroïsme pour +1d6",
             "heroismBonus1d6": "Utiliser un point d'héroïsme pour +2d6",
