--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,7 @@
         "label": {
             "activity": "Activity",
             "armors": "Armors",
+            "biotechboonuse": "Utiliser le niveau héroïque d'un atout",
             "bond": "Bond",
             "bonus": "Damage Bonus",
             "bio": "Biography",
@@ -128,6 +129,9 @@
         },
         "chatmessage":{
             "badshapedamage": "In bad shape",
+            "biotechBoonRollFail": "La température corporelle monte, un point de biotech est dépensé... ",
+            "biotechBoonRollIntro": "{actingCharName} utilise le niveau héroïque d'un de ses atouts",
+            "biotechBoonRollSuccess": "La température corporelle reste stable, pas de dépense de point de biotech. ",
             "custommodifier": "Custom modifier used : ({rollModifier}).",
             "heroismmodifier": "One Heroism point used : +{dice}d6",
             "rollformula": "Dices rolled: ",
