--- a/lang/fr.json
+++ b/lang/fr.json
@@ -31,6 +31,7 @@
             "equipment": "Équipement",
             "elite": "Élite",
             "experience": "Expérience",
+            "experience_total": "Total d'expérience",
             "flaw": "Défaut",
             "goal": "Idéal",
             "health": "Vitalité",
